supervisr (0.1.2) unstable; urgency=medium

  * [core] cleanup migrations for first-install
  * [debian] adjust supervisr-ctl commands
  * [debian] fix wrong path to supervisr-ctl
  * ! [*] rename labels, adjust all migrations
  * [core] [ldap] [saml] Start to update urls
  * Add license
  * [core] fix imports
  * [core] rework tasks
  * [core] fix supervisr-ctl not being able to run as symlink
  * [core] fix install command
  * [core] fix task names in debian files
  * [core] also install docs and CHANGELOG
  * [core] add build_static command, add static
  * [dns] fix edit/delete of records with same name
  * [core] fix type
  * [core] supress supervisr-ctl output when readlink fails
  * replace logger.error with logger.warning to not send email reports
  * fix dbconfig not being used, interpret dbconfig settings, write SECRET_KEY to seperate file
  * [ctl] run as supervisr if packaged
  * [ci] fix before_script for prod, add dpkg-build task
  * allow cherrypy settings from config file, dynamically load config from conf.d
  * fix lint/syntax errors
  * fix supervisr-ctl
  * [core] [puppet] [static] add more unittests
  * [core] fix provider edit, add gitlab error reporter
  * [tasks] fix tasks not working
  * [tasks] fix leftover import
  * [core] fix imports
  * [core] add unittests v2
  * [core][dns][mail] refactor (singular nouns to plural)
  * [dns] [bacula] check if bacula db connection is working on page
  * [bacula] fix 'NoneType' object has no attribute 'JobId'
  * [auth/oauth/client] show better error message when provider doesnt provide email
  * [mod/auth/oauth/client] fix import order
  * [*] refactor all, remove crispy_forms
  * [core] rewrote login view to CBV, update tests, make oauth login_with better
  * [core] [dns] [web] more refactoring, add related_products
  * [vmware] add vmware provider
  * [core] fix template tag cache for anonymous user, fix admin login
  * [core] rework API, move signup into CBV