@@ -1,5 +1,6 @@
 supervisr (0.1.2) unstable; urgency=medium
 
+  * [tasks] add argument to change listen address and port
   * [core] cleanup migrations for first-install
   * [debian] adjust supervisr-ctl commands
   * [debian] fix wrong path to supervisr-ctl
